--- a/README
+++ b/README
@@ -1,1 +1,28 @@
+# Puzzle Game
 
+Foobar is a Python library for dealing with word pluralization.
+
+## Installation
+
+Use the package manager [pip](https://pip.pypa.io/en/stable/) to install correct libary.
+
+```bash
+pip install pygame_gui pygame
+```
+
+## Usage
+
+```
+python main.py
+```
+
+## Contributing
+
+Pull requests are welcome. For major changes, please open an issue first
+to discuss what you would like to change.
+
+Please make sure to update tests as appropriate.
+
+## License
+
+[MIT](https://choosealicense.com/licenses/mit/)
